@@ -5,7 +5,10 @@ import org.springframework.web.bind.support.WebDataBinderFactory;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.method.support.HandlerMethodArgumentResolver;
 import org.springframework.web.method.support.ModelAndViewContainer;
+import ru.netology.rest.authorities.Authorities;
+import ru.netology.rest.model.User;
 
+import java.util.Collections;
 import java.util.List;
 
 public class UserArgumentResolver implements HandlerMethodArgumentResolver {
@@ -18,9 +21,10 @@ public class UserArgumentResolver implements HandlerMethodArgumentResolver {
     public Object resolveArgument(MethodParameter parameter, ModelAndViewContainer mavContainer, NativeWebRequest webRequest, WebDataBinderFactory binderFactory) throws Exception {
         String name = webRequest.getParameter("name");
         String password = webRequest.getParameter("password");
-        assert name != null;
-        assert password != null;
-        return List.of(name,password);
+        if (name == null || password == null) {
+            return null;
+        }
+        return new User(name, password, Collections.emptyList());
     }
 
 }
